tests/ui/directory_ownership/macro-expanded-mod.stderr
error: cannot declare a non-inline module inside a block unless it has a path attribute
  --> $DIR/macro-expanded-mod.rs:5:9
   |
LL | / macro_rules! mod_decl {
LL | |     ($i:ident) => {
LL | |         mod $i;
   | |         ^^^^^^^
LL | |     };
LL | | }
   | |_- in this expansion of `mod_decl!`
...
LL |       mod_decl!(foo);
   |       -------------- in this macro invocation

error: aborting due to previous error

